Fixing the pre bug

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="row blue pad box">
 	<div class="span8">
-		<h2 class="white shadow-text valign">An ORM Using the DataMapper Pattern</h2>
+		<h2 class="white shadow-text valign">ORM Using the DataMapper Pattern</h2>
 
 		<div><a href="downloads/Cactus-0.5.0.zip" class="button large">Download</a></div>
 
@@ -12,7 +12,7 @@ layout: default
 
 <div class="code"><pre class="shrink">"require":{
 	"davewid/cactus": "0.5.*"
-}<pre></div>
+}</pre></div>
 
 	</div>
 	<div class="span4">
@@ -21,18 +21,23 @@ layout: default
 </div>
 
 <div class="row pad box">
-	<div class="span4">
-		<h3 class="valign">Mustache Renderer</h3>
-		<p>Owl ships with a Mustache rendering engine.
-		An Engine interface is also included for greater flexibility.</p>
+	<div class="span3">
+		<h3 class="valign">PDO Adapter</h3>
+		<p>Keeps your queries safe by shipping with a PDO adapter by default.</p>
 	</div>
-	<div class="span4">
+	<div class="span3">
+		<h3 class="valign">Query Builder</h3>
+		<p><a href="">Peyote</a> an OOP database query builder is bundled with Cactus.
+			You can write raw sql or susbsitute your own query builder engine for 
+			greater developer flexibility.</p>
+	</div>
+	<div class="span3">
 		<h3 class="valign">Open Source</h3>
 		<p>Cactus is licensed under the fairly open
 			<a href="http://www.opensource.org/licenses/mit-license.php">MIT</a> license.
 			Use the	library as you wish!</p>
 	</div>
-	<div class="span4">
+	<div class="span3">
 		<h3 class="valign">Standards Compliant</h3>
 		<p>Cactus is in compliance with
 			<a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-0.md">PSR-0</a>
