Updates to the homepage

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@ layout: default
 ---
 
 <div class="row blue pad box">
+	<div class="span4">
+		<img src="assets/cactus.png" alt="Cactus" class="fit" />
+	</div>
 	<div class="span8">
 		<h2 class="white shadow-text valign">ORM Using the DataMapper Pattern</h2>
 
@@ -15,9 +18,6 @@ layout: default
 }</pre></div>
 
 	</div>
-	<div class="span4">
-		<img src="assets/cactus.png" alt="Cactus" class="fit" />
-	</div>
 </div>
 
 <div class="row pad box">
@@ -27,9 +27,10 @@ layout: default
 	</div>
 	<div class="span3">
 		<h3 class="valign">Query Builder</h3>
-		<p><a href="">Peyote</a> an OOP database query builder is bundled with Cactus.
-			You can write raw sql or susbsitute your own query builder engine for 
-			greater developer flexibility.</p>
+		<p><a href="http://davewid.github.com/Peyote/">Peyote</a>,
+			an OOP database query builder, is bundled with Cactus.
+			You can also write raw sql or susbsitute your own query builder engine
+			if you like.</p>
 	</div>
 	<div class="span3">
 		<h3 class="valign">Open Source</h3>
